# LazyMatrix

./: .gitignore  CMakeLists.txt  README.md
include/: double_comparison.hpp  exceptions.hpp  lazy_matrix.hpp  matrix_iterator.hpp  my_concept.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/app_testing/include/: app_testing.hpp
tests/app_testing/src/: main.cpp
tests/unit/: base_operations.cpp  multiplication.cpp  transpose.cpp
